admin/edit.css
/**
 * CSS code for the "Edit" screen
 *
 * @package TablePress
 * @subpackage Views CSS
 * @author Tobias Bäthge
 * @since 1.0.0
 */

/* hour glass cursor, while waiting for AJAX */
body.wait * {
	cursor: wait !important;
}

/* container for preview and advanced editor */
.hidden-container {
	display: none;
}

/* Margin in Help boxes */
.hidden-help-box-container p {
	margin: 6px;
}

/* move Thickbox more to the front, so that it's always above a jQuery UI dialog */
#TB_HideSelect {
	z-index: 301099;
}
#TB_overlay {
	z-index: 301100;
}
#TB_window {
	z-index: 301102;
}
#TB_load {
	z-index: 301103;
}

/* Table Preview (CSS for actual preview is directly in the preview HTML) */
#table-preview-iframe {
	width: 100%;
	height: 100%;
	margin: 0;
	border: none;
}

/* Content of the Advanced Editor jQueryUI dialog */
#advanced-editor {
	padding: 0px 3px 3px;
}
#advanced-editor .submitbox {
	padding: 6px 6px 0px;
	font-size: 11px;
	overflow: auto;
	height: 28px;
}
#advanced-editor-confirm {
	float: right;
}
#advanced-editor-cancel {
	line-height: 25px;
}

/* spinner/loading animation while saving/preview preparation */
.animation-saving,
.animation-preview {
	display: inline-block;
	background: url(../../../../wp-admin/images/wpspin_light.gif);
	height: 16px;
	width: 16px;
	margin: 4px 0 0 5px;
	vertical-align: top;
}

/* Margins from dynamically created (inline) .error/.updated messages */
#tablepress-page div.save-changes-success,
#tablepress-page div.save-changes-error,
#tablepress-page div.preview-error {
	margin: 0 0 15px;
}
/* table cells */
#edit-form-body td {
	padding: 2px 2px 2px 0px;
	height: 32px;
}

/* cells of currently focussed row/autogrow */
#edit-form-body .focus td {
	height: 60px;
}

/* alternating row colors */
#edit-form-body .odd {
	background-color: #eeeeee;
}

#edit-form-body textarea {
	display: block;
	width: 150px;
	height: 100%;
}
#edit-form-body textarea:focus {
	border-color: #000000;
}

#edit-form-body input[type="checkbox"] {
	margin-right: 3px;
}
#edit-form-foot input[type="checkbox"] {
	margin-top: 6px;
}

#edit-form {
	border-collapse: collapse;
}

/* row and column moving with jQueryUI sortable */
#edit-form .move-handle {
	display: block;
	margin: auto;
	width: 16px;
	height: 16px;
	cursor: move;
	text-align: center;
	font-weight: bold;
}
.no-js #edit-form .move-handle {
	cursor: auto;
}
#edit-form-body .move-handle {
	margin: auto 3px;
	min-width: 16px;
	width: auto;
}

#edit-form .move-hover {
	position: absolute;
	z-index: 1000;
	height: 26px; /* height of "#edit-form-body td" - 6px */
}

#edit-form .focus .move-hover {
	height: 54px; /* height of "#edit-form-body .focus td" - 6px */
}

/* hightlighting of table head and foot in table cells */
#edit-form-body .head-row,
#edit-form-body .foot-row {
	background-color: #d9edf7;
}

/* head cells (column letters) and sorting */
#edit-form-head th {
	height: 16px;
	vertical-align: top;
}
#edit-form-head .sort-control {
	display: none;
	float: right;
	width: 12px;
	height: 12px;
	cursor: pointer;
	margin: 2px 3px 0 0;
}
.js #edit-form-head .head:hover .sort-control {
	display: block;
}
.js #edit-form-head .ui-sortable-helper:hover .sort-control {
	display: none;
}
#edit-form-head .sort-asc {
	background: url(img/sort-asc.gif) no-repeat center center;
}
#edit-form-head .sort-desc {
	background: url(img/sort-desc.gif) no-repeat center center;
}

/* (red) highlighting of hidden rows and columns */
#edit-form .row-hidden td,
/* #edit-form .row-hidden th, */
#edit-form .row-hidden textarea,
#edit-form .column-hidden,
#edit-form .column-hidden textarea {
	background-color: #ffe0e0;
}

#tablepress_edit-table-manipulation td {
	width: 50%;
}

